--- a/FoodHub/Views/Signup/Index.cshtml
+++ b/FoodHub/Views/Signup/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model FoodHub.ViewModels.LoginViewModel
+
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -14,31 +15,40 @@
                 <li><a href="#" data-ref="uname">Username</a></li>
                 <li><a href="#" data-ref="email">Email</a></li>
                 <li><a href="#" data-ref="viewpswd">Password</a></li>
+                <li><a href="#" data-ref="phone">DOB</a></li>
                 <li><a href="#" data-ref="phone">Phone</a></li>
+                <li><a href="#" data-ref="phone">Address</a></li>
+                <li><a href="#" data-ref="phone">City</a></li>
+                <li><a href="#" data-ref="phone">Pin</a></li>
+                <li><a href="#" data-ref="phone">State</a></li>
+                <li><a href="#" data-ref="phone">User_Type</a></li>
+                <li><a href="#" data-ref="phone">Gender</a></li>
             </ol>
         </div>
         <form id="sign-form" class="sign-form">
             <ol class="questions">
                 <li>
-                    <span><label for="name">Hi, What is your Name?</label></span>
-                    <input class="active" id="name" name="name" type="text" placeholder="Enter your full name" autofocus />
+                    <span><label for="name">USER_NAME</label></span>
+                    @Html.TextBoxFor(m => m.USER_DETAILS.USER_NAME, new { id = "USER_NAME", @class = "active", @placeholder = "Username" })
+                </li>
+
+                <li>
+                    <span><label for="email">Enter Email</label></span>
+                    @Html.TextBoxFor(m => m.USER_DETAILS.EMAIL, new { id = "EMAIL", @class = "", @placeholder = "Email" })
                 </li>
                 <li>
-                    <span><label for="uname">& what shall we call you?</label></span>
-                    <input id="uname" name="username" type="text" placeholder="Enter a username" autofocus />
-                </li>
-                <li>
-                    <span><label for="email">Enter you email</label></span>
-                    <input id="email" name="email" type="text" placeholder="Email" autofocus />
-                </li>
-                <li>
-                    <span><label for="password">Choose a password</label></span>
-                    <input id="viewpswd" name="password" type="text" placeholder="this your password" />
-                    <input id="password" name="password" type="password" placeholder="make sure you dont forget" autofocus />
+                    <span><label for="password">PASSWORD</label></span>
+                    @Html.PasswordFor(m => m.USER_DETAILS.PASSWORD, new { id = "PASSWORD", @class = "", @maxlength = 32 })
                     <span id="show-pwd" class="view"></span>
                 </li>
+
                 <li>
-                    <span><label for="phone">Enter your phone number</label></span>
+                    <span><label for="DOB">DOB</label></span>
+                    <input type="text" name="startDate" value="" id="datepicker" class="" data-dateformat="dd/mm/yy" placeholder="Date">
+                    @*@Html.TextBoxFor(m => m.USER_DETAILS.DOB, new { id = "datepicker", @class = "form-control input ", @dateformat = "dd/mm/yy" })*@
+                </li>
+                <li>
+                    <span><label for="phone">Contact_no</label></span>
                     <select name="countryCode" class="country">
                         <option data-countryCode="GB" value="91">(+91) INDIA </option>
                         <option data-countryCode="GB" value="44">(+44) UK </option>
@@ -61,6 +71,38 @@
                     <input id="phone" name="phone" type="text" autofocus />
                 </li>
                 <li>
+                    <span><label for="address">Address</label></span>
+                    @Html.TextBoxFor(m => m.USER_DETAILS.ADDRESS, new { id = "ADDRESS", @class = "", @placeholder = "Email" })
+                </li>
+                <li>
+                    <span><label for="city">City</label></span>
+                    <select id="dbcity" class="form-control">
+                        <option value="-1">Select City</option>
+                    </select>
+
+                </li>
+                <li>
+                    <span><label for="pin">Pin</label></span>
+                    @Html.TextBoxFor(m => m.USER_DETAILS.PIN, new { id = "PIN", @class = "", @placeholder = "Email" })
+                </li>
+                <li>
+                    <span><label for="state">Select State</label></span>
+                    <select id="dbstate" class="form-control">
+                        <option value="-1">Select State</option>
+                    </select>
+
+                </li>
+                <li>
+                    <span><label for="user_type">User_type</label></span>
+
+                    @Html.TextBoxFor(m => m.USER_DETAILS.USER_TYPE, new { id = "USER_TYPE", @class = "", @placeholder = "Email" })
+                </li>
+                <li>
+                    <span><label for="gender">Gender</label></span>
+
+                    @Html.TextBoxFor(m => m.USER_DETAILS.GENDER, new { id = "GENDER", @class = "", @placeholder = "Email" })
+                </li>
+                <li>
                     <p style="margin-top: 45px;font-size: 32pt;float:right">
                         <a href="#" style="color:white;text-decoration:none" id="signup">sign up</a>
                     </p>
@@ -68,6 +110,54 @@
 
 
             </ol>
+
+            <script type="text/javascript">
+                        $(document).ready(function () {
+                            BindStatelist();
+                        });
+                        function BindStatelist() {
+
+                                $.ajax({
+                                    type: "POST",
+                                    url: '@Url.Action("GetState", "LoginController")',
+                                    contentType: "application/json;charset=utf-8",
+                                    async: false,
+                                    catch: false,
+                                    dataType: "json",
+                                    success: function (data) {
+                                        $.each(data, function (index, value) {
+                                            $("#dbstate").append('<option value="' + value.STATE_ID +'"> +value.STATE_NAME+</option>')
+                                        });
+
+                                    },
+                                    error: function (error) {
+                                        console.log(error);
+                                    }
+                                });
+                        }
+                        $(document).on('change', '#dbstate', function () {
+                            var STATE_ID = $(this).val();
+                            $.ajax({
+                                type: "POST",
+                                url: '@Url.Action("GetCity", "LoginController")',
+                                data: JSON.stringify{(_STATE_ID: STATE_ID)},
+                            contentType: "application/json;charset=utf-8",
+                            async: false,
+                             catch: false,
+                            dataType: "json",
+                            success: function(data) {
+                                $("#dbstate").empty();
+                                $.each(data, function (index, value) {
+                                    $("#dbstate").append('<option value="' + value.CITY_ID +'">+value.CITY_NAME+</option>')
+                                });
+                        },
+                        error: function(error) {
+                            console.log(error);
+                        }
+                            })
+
+                        });
+            </script>
             <div id="next-page" alt="Kiwi standing on oval"></div>
             <div class="error-message"></div>
 
