--- a/FoodHub/Views/Home/Menu.cshtml
+++ b/FoodHub/Views/Home/Menu.cshtml
@@ -1,6 +1,7 @@
-﻿
+﻿@model FoodHub.ViewModels.ItemEntry
+
 @{
-    ViewBag.Title = "Menu";
+        ViewBag.Title = "Menu";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -12,86 +13,34 @@
 
         <div class="col-md-12">
             <div class="row">
-                <div class="col-md-6 col-sm-6 col-sx-12">
-                    <div class="menu-item">
-                        <div class="menu-left">
-                            <img src="assets/img/menu/img-01.jpg" alt="">
-                        </div>
-                        <div class="menu-right">
-                            <span class="price">$45</span>
-                            <h4>Rosted Chicken with Wine</h4>
-                            <div class="rating">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
+                @if (Model.ITEMLIST != null)
+                {
+                    foreach (var Q in Model.ITEMLIST)
+                    {
+                        <div class="col-md-6 col-sm-6 col-sx-12">
+                            <div class="menu-item">
+                                <div class="menu-left">
+                                    <img src=@Q.IMG alt="">
+                                </div>
+                                <div class="menu-right">
+                                    <span class="price">@Q.PRICE</span>
+                                    <h4>@Q.ITEM_NM</h4>
+                                    <div class="rating">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                    </div>
+                                    <p>@Q.ITEM_DESC</p>
+                                </div>
                             </div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam provident aliquam, fuga asperiores obcaecati...</p>
                         </div>
-                    </div>
-                </div>            <div class="col-md-6 col-sm-6 col-sx-12">
-                    <div class="menu-item">
-                        <div class="menu-left">
-                            <img src="assets/img/menu/img-01.jpg" alt="">
-                        </div>
-                        <div class="menu-right">
-                            <span class="price">$45</span>
-                            <h4>Rosted Chicken with Wine</h4>
-                            <div class="rating">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                            </div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam provident aliquam, fuga asperiores obcaecati...</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
+                    }
+                }
 
-            <!-- Left Menu -->
-            <div class="col-md-6 col-sm-6 col-sx-12">
-                <div class="menu-item">
-                    <div class="menu-left">
-                        <img src="assets/img/menu/img-01.jpg" alt="">
-                    </div>
-                    <div class="menu-right">
-                        <span class="price">$45</span>
-                        <h4>Rosted Chicken with Wine</h4>
-                        <div class="rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam provident aliquam, fuga asperiores obcaecati...</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Right Menu -->
-            <div class="col-md-6 col-sm-6 col-xs-12">
-                <div class="menu-item">
-                    <div class="menu-left">
-                        <img src="assets/img/menu/img-02.jpg" alt="">
-                    </div>
-                    <div class="menu-right">
-                        <span class="price">$45</span>
-                        <h4>Rosted Chicken with Wine</h4>
-                        <div class="rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam provident aliquam, fuga asperiores obcaecati...</p>
-                    </div>
-                </div>
+
+
             </div>
         </div>
     </div>
