--- a/FoodHub/Views/Home/single_Item.cshtml
+++ b/FoodHub/Views/Home/single_Item.cshtml
@@ -1,6 +1,6 @@
-﻿@model IEnumerable<FoodHub.Models.ITEMLIST>
+﻿@model FoodHub.ViewModels.ItemEntry
 @{
-  
+
     ViewBag.Title = "single_Item";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -9,67 +9,65 @@
     <h2>single_Item</h2>
 </center>
 
-    
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 package-leftpart">
-                    <img src="img/recipes/s1.jpg" alt="">
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 package-leftpart">
+            <img src="img/recipes/s1.jpg" alt="">
+        </div>
+        <div class="col-md-6">
+            <div class="package-rightpart">
+                <div class="group">
+                    @Html.LabelFor(m => m.ITEM.ITEM_NM, new { @class = "label" })
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum quo distinctio, cupiditate harum labore assumenda vitae velit officia, nihil id corporis iure. Mollitia qui illo, similique blanditiis! Reiciendis, nostrum, nobis?</p>
                 </div>
-                <div class="col-md-6">
-                    <div class="package-rightpart">
-                        <div class="group">
-                            @Html.LabelFor(m => m.ITEMLIST.ITEM_NM, new { @class = "label" })
-                            @Html.TextBoxFor(m => m.ITEMLIST.ITEM_NM, new { id = "Txtnm", @class = "form-control input", @maxlength = 20, @placeholder = "Item_Name" })
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum quo distinctio, cupiditate harum labore assumenda vitae velit officia, nihil id corporis iure. Mollitia qui illo, similique blanditiis! Reiciendis, nostrum, nobis?</p>
+                <div class="group">
+                    @Html.LabelFor(m => m.ITEM.PRICE, new { @class = "label" })
+                    @*<div class="col-md-4 col-sm-4">
+                            <ul>
+                                <li>Eggs</li>
+                                <li>Chicken</li>
+                                <li>Swordfish</li>
+                            </ul>
                         </div>
-                        <div class="group">
-                            @Html.LabelFor(m => m.ITEMLIST.PRICE, new { @class = "label" })
-                            @Html.TextBoxFor(m => m.ITEMLIST.PRICE, new { id = "Txtprice", @class = "form-control input", @maxlength = 20, @placeholder = "Price" })
-                            @*<div class="col-md-4 col-sm-4">
-                <ul>
-                    <li>Eggs</li>
-                    <li>Chicken</li>
-                    <li>Swordfish</li>
-                </ul>
-            </div>
-            <div class="col-md-4 col-sm-4">
-                <ul>
-                    <li>Fruity</li>
-                    <li>Caffe</li>
-                    <li>Pasta</li>
-                </ul>
-            </div>
-            <div class="col-md-4 col-sm-4">
-                <ul>
-                    <li>Chicken</li>
-                </ul>
-            </div>*@
+                        <div class="col-md-4 col-sm-4">
+                            <ul>
+                                <li>Fruity</li>
+                                <li>Caffe</li>
+                                <li>Pasta</li>
+                            </ul>
                         </div>
-                        <div class="group">
-                            @Html.LabelFor(m => m.ITEMLIST.STATUS, new { @class = "label" })
-                            @Html.TextBoxFor(m => m.ITEMLIST.STATUS, new { id = "Txtstatus", @class = "form-control input", @maxlength = 20, @placeholder = "Status" })
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum quo distinctio, cupiditate harum labore assumenda vitae velit officia, nihil id corporis iure. Mollitia qui illo, similique blanditiis! Reiciendis, nostrum, nobis?</p>
+                        <div class="col-md-4 col-sm-4">
+                            <ul>
+                                <li>Chicken</li>
+                            </ul>
+                        </div>*@
+                </div>
+                <div class="group">
+                    @*@Html.LabelFor(m => m.ITEMLIST.STATUS, new { @class = "label" })
+                    @Html.TextBoxFor(m => m.ITEMLIST.STATUS, new { id = "Txtstatus", @class = "form-control input", @maxlength = 20, @placeholder = "Status" })*@
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum quo distinctio, cupiditate harum labore assumenda vitae velit officia, nihil id corporis iure. Mollitia qui illo, similique blanditiis! Reiciendis, nostrum, nobis?</p>
+                </div>
+                <div class="package-price row">
+                    <div class="col-md-3 col-sm-3 price-pd">
+                        <h2 class="price-bold">$48.79</h2>
+                    </div>
+                    <div class="col-md-4 col-sm-4">
+                        <div class="regular-price">
+                            <span class="text"></span><br>
+                            <span class="price-close">$49.67</span>
                         </div>
-                        <div class="package-price row">
-                            <div class="col-md-3 col-sm-3 price-pd">
-                                <h2 class="price-bold">$48.79</h2>
-                            </div>
-                            <div class="col-md-4 col-sm-4">
-                                <div class="regular-price">
-                                    <span class="text"></span><br>
-                                    <span class="price-close">$49.67</span>
-                                </div>
-                            </div>
-                            <div class="col-md-5 col-sm-5">
-                                <a href="#" class="btn btn-common"><i class="icon-cart"></i> Buy Now</a>
-                            </div>
-                        </div>
+                    </div>
+                    <div class="col-md-5 col-sm-5">
+                        <a href="#" class="btn btn-common"><i class="icon-cart"></i> Buy Now</a>
                     </div>
                 </div>
             </div>
         </div>
-    
-    <section>
+    </div>
+</div>
+
+<section>
     <div class="container">
         <div class="row">
             <div class="featured-carousel owl-carousel">
@@ -142,8 +140,8 @@
             </div>
         </div>
     </div>
-    </section>
-    <script src="~/Js/jquery.min.js"></script>
+</section>
+<script src="~/Js/jquery.min.js"></script>
 <script type="text/javascript">
     $(document).ready(function () {
         $.ajax({
