--- a/FoodHub/Views/Home/Menu.cshtml
+++ b/FoodHub/Views/Home/Menu.cshtml
@@ -20,7 +20,7 @@
                         <div class="col-md-6 col-sm-6 col-sx-12">
                             <div class="menu-item">
                                 <div class="menu-left">
-                                    <img src=@Q.IMG alt="">
+                                    <img src=@Q.IMG alt="@Q.ITEM_NM">
                                    
 
                                 </div>
